Ostatni milestone - wersja wymagajaca jeszcze duzo szlifu...

--- a/thesis/02Biznes.tex
+++ b/thesis/02Biznes.tex
@@ -8,7 +8,7 @@ System \textit{iQuest}, będący przedmiotem niniejszej Pracy Dyplomowej, jest n
 
 W systemie zdefiniowani są następujący aktorzy:
 \begin{itemize}
-\item System -- opisywany system, \textit{iQuest}.
+\item System -- opisywany system. \textit{iQuest}.
 \item Administrator -- zarządza sprawami technicznymi, związanymi platformą \textit{Moodle}\footnote{ang. \definicja{Modular Object-Oriented Dynamic Learning Environment}}. Funkcję mogą pełnić osoby mające podstawową wiedzę informatyczną, znający mechanizmy \textit{Moodle'a}.
 \item Administrator Bazy Danych -- zarządza sprawami technicznymi, związanymi z prawami do grup docelowych, ich tworzeniem i utrzymaniem. Funkcję mogą pełnić Pracownicy Uczelni\slash Dziekanatu oraz Administratorzy Systemów.
 \item Ankieter -- tworzy ankiety, wskazuje grupy docelowe i rozsyła ankiety. Może też przeglądać raporty. Funkcję mogą pełnić: Prowadzący zajęcia, Pracownik Dziekanatu.
