--- a/thesis/03Funkcjonalne.tex
+++ b/thesis/03Funkcjonalne.tex
@@ -212,10 +212,10 @@ Poniżej przedstawiono przypadki użycia dotyczące wszystkich Użytkowników.
 \ucaction{3. System uwierzytelnia Użytkownika}
 }}
 {\ucextensions{
-\ucaction{2.A Użytkownik chce się zalogować przy pomocy eKonta}
-\ucaction{2.A.1 Użytkownik wybiera opcję logowania przez eKonto}
-\ucaction{2.A.2 System przekierowuje Użytkownika na stronę logowania przez eKonto (eLogin)}
-\ucaction{2.A.3 Użytkownik wprowadza dane logowania do eKonta}
+\ucaction{2.A Użytkownik chce się zalogować przy pomocy \textit{eKonta}}
+\ucaction{2.A.1 Użytkownik wybiera opcję logowania przez \textit{eKonto}}
+\ucaction{2.A.2 System przekierowuje Użytkownika na stronę logowania przez \textit{eKonto} (\textit{eLogin})}
+\ucaction{2.A.3 Użytkownik wprowadza dane logowania do \textit{eKonta}}
 \ucaction{2.A.4 Powrót do kroku 3.}
 }}
 {}
