--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -6,7 +6,7 @@
 
 System \textit{iQuest} został stworzony w oparciu o model architektury trójwarstwowej, w którym wyróżnione zostały warstwy: danych, logiki biznesowej oraz prezentacji. Dzięki takiemu podejściu, zadania związane z poszczególnymi warstwami można było bez większego problemu rozdzielić między członków zespołu programistów, a w przypadku ewentualnej modyfikacji jednej z warstw nie występuje konieczność wprowadzania zmian w reszcie projektu.
 
-\section{Opis ogólny architektury -- Marketecture}
+\section{Opis ogólny architektury -- ,,Marketektura''}
 \label{Chapter52}
 
 \begin{figure}[H]
@@ -50,10 +50,10 @@ System \textit{iQuest} to aplikacja internetowa w postaci zbioru rozszerzeń pla
 				& Dobra znajomość kodu przez programistów. & Konieczność tworzenia wszystkiego od podstaw. \\
 				& & Nieznajomość technologii przez programistów. \\ \hline
 \end{tabular}
-\caption{Podejście drugie -- napisanie aplikacji od podstaw przy użyciu \textit{JAVA~EE}}\label{tab:SWOT2}
+\caption{Podejście drugie -- napisanie aplikacji od podstaw przy użyciu \textit{Java~EE}}\label{tab:SWOT2}
 \end{table}
 
-W oparciu o analizy SWOT przedstawione w tabelach \ref{tab:SWOT1} i \ref{tab:SWOT2}, zespół zarządzający zarządził o realizacji projektu z użyciem platformy \textit{Moodle}.
+W oparciu o analizy SWOT przedstawione w tabelach \ref{tab:SWOT1}. i \ref{tab:SWOT2}., zespół zarządzający zarządził o realizacji projektu z użyciem platformy \textit{Moodle}.
 
 \section{Perspektywy architektoniczne}
 \label{Chapter54}
@@ -62,7 +62,7 @@ W oparciu o analizy SWOT przedstawione w tabelach \ref{tab:SWOT1} i \ref{tab:SWO
 \label{Chapter541}
 
 \begin{figure}[H]
-\centering\includegraphics[width=15cm]{figures/PhysicalView}
+\centering\includegraphics[width=0.9\textwidth]{figures/PhysicalView}
 \caption{Diagram perspektywy fizycznej}\label{rys:PerspektywaFizyczna}
 \end{figure}
 
