--- a/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
+++ b/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
@@ -2,7 +2,7 @@
 \label{Chapter67}
 
 %Ja to robiłem - KU
-\emph{Moodle} jako paradygmat programowania stosuje podejście proceduralne. Natomiast logika zaprogramowanej wtyczki podejście obiektowe. Zaprojektowano więc mechanizm łączący te dwa sposoby programowania.
+\textit{Moodle} jako paradygmat programowania stosuje podejście proceduralne. Natomiast logika zaprogramowanej wtyczki podejście obiektowe. Zaprojektowano więc mechanizm łączący te dwa sposoby programowania.
 
 Mechanizm łączący stosuje podejście proceduralne. Zaimplementowano szereg dodatkowych funkcji, które operują na danych zwracanych przez formularze. Zamiast zapisywać je bezpośrednio do bazy danych, tworzą najpierw obiekty, które dopiero później zapisywane są do bazy. Cały proces odbywa się po stronie serwera i jest zapisany w języku PHP. 
 
