--- a/thesis/06-B-Problemy-KU.tex
+++ b/thesis/06-B-Problemy-KU.tex
@@ -1,9 +1,9 @@
 \subsection{Formularze}
 \label{Chapter625}
 
-Projektując graficzny interfejs użytkownika, prędzej czy później pojawia się potrzeba wyboru narzędzia do projektowania formularzy. Rozważano kilka możliwości. Pierwszym, najbardziej naturalnym odruchem była idea zastosowania czystego języka \textit{HTML}. Pod uwagę brane było także zastosowanie wbudowanych w Moodle \textit{API} -- \textit{Form API} oraz \textit{Output API}, jak też użycie zewnętrznych API, nie związanych bezpośrednio z platformą. \\
+Projektując graficzny interfejs użytkownika, prędzej czy później pojawia się potrzeba wyboru narzędzia do projektowania formularzy. Rozważano kilka możliwości. Pierwszym, najbardziej naturalnym odruchem była idea zastosowania czystego języka \textit{HTML}. Pod uwagę brane było także zastosowanie wbudowanych w \textit{Moodle} \textit{API} -- \textit{Form API} oraz \textit{Output API}, jak też użycie zewnętrznych \textit{API}, nie związanych bezpośrednio z platformą. \\
 
-Zastosowanie HTML oraz zewnętrznych API zostało odrzucone. Decyzję tę podjęto ze względu na obawę, że pisanie interfejsu w całości od nowa okaże się zbyt pracochłonne. Z uwagi na dość mocno ograniczony czas, nie chciano wyważać otwartych już drzwi, tworząc coś, co już wcześniej zostało przez kogoś zrealizowane, nawet kosztem tego, że interfejs nie wyglądał dokładnie tak, jak go zaprojektowano -- na pierwszym miejscu stawiano jego kompletność. Zastosowanie zewnętrznych API było natomiast niezgodne z założeniem, mówiącym o korzystaniu z interfejsów Moodle wszędzie tam, gdzie to możliwe. Niepożądanym było, aby użytkownik poczuł, że programowana wtyczka nie jest integralną częścią platformy. Co więcej, różnice w stosunku do oryginalnego wyglądu platformy mogłyby sprawić, że interfejs oceniony zostałby jako nieintuicyjny. To zaważyło na decyzji odnośnie zastosowania \textit{Output API} wbudowanego w Moodle. \\
+Zastosowanie \textit{HTML} oraz zewnętrznych \textit{API} zostało odrzucone. Decyzję tę podjęto ze względu na obawę, że pisanie interfejsu w całości od nowa okaże się zbyt pracochłonne. Z uwagi na dość mocno ograniczony czas, nie chciano wyważać otwartych już drzwi, tworząc coś, co już wcześniej zostało przez kogoś zrealizowane, nawet kosztem tego, że interfejs nie wyglądał dokładnie tak, jak go zaprojektowano -- na pierwszym miejscu stawiano jego kompletność. Zastosowanie zewnętrznych \textit{API} było natomiast niezgodne z założeniem, mówiącym o korzystaniu z interfejsów \textit{Moodle} wszędzie tam, gdzie to możliwe. Niepożądanym było, aby użytkownik poczuł, że programowana wtyczka nie jest integralną częścią platformy. Co więcej, różnice w stosunku do oryginalnego wyglądu platformy mogłyby sprawić, że interfejs oceniony zostałby jako nieintuicyjny. To zaważyło na decyzji odnośnie zastosowania \textit{Output API} wbudowanego w \textit{Moodle}. \\
 
 Wyżej wspomniane API jest zestawem funkcji, wprowadzonych wraz wersją $2.0$ Moodle. Umożliwiają one wstawianie na stronę standardowych elementów formularza, takich jak: etykiety, przyciski, linki, tabele, itp. Niestety, z nieznanych dla osób tworzących ten dokument przyczyn, to doskonale wyposażone i w pełni udokumentowane API zostało usunięte z Moodle wraz z aktualizacją do wersji $2.2$. Co bardziej niezrozumiałe, niektóre elementy można nadal stosować, lecz niemożliwym okazało się odnalezienie dotyczącej tego dokumentacji. \\
 
