--- a/thesis/08Wnioski.tex
+++ b/thesis/08Wnioski.tex
@@ -38,21 +38,25 @@ Wnioski:
 \end{itemize}
 \item Maciej Trojan
 \begin{itemize}
-\item ...
+\item Niewątpliwą zaletą pracy nad dużym projektem było zrozumienie jak ważną role odgrywa
+dobre zaplanowanie i zaprojektowanie oprogramowania przed przystąpieniem do bezpośredniego
+programowania.
+\item Praca w zespole z określonym podziałem na role, umożliwiła szybkie rozwiązywanie
+problemów napotkanych w trakcie wytwarzania oprogramowania. Ponadto podział ten wymusił
+zagłębienie się w dziedzinach powiązanych z pełnioną rolą, co znacząco wpłynęło na
+rozwijanie umiejętności.
+\item Aby projekt został zrealizowany w wyznaczonym terminie, powstające zagadnienia należy
+przydzielać do konkretnych osób oraz egzekwować ich wykonanie.
 \end{itemize}
 \item Krzysztof Urbaniak:
 \begin{itemize}
-\item Kluczem do sprawnej pracy jest dobra organizacja zasobów. System \emph{Redmine} bardzo pomagał w odpowiednim przydzieleniu zadań do osób tak, aby projekt skończyć w określonym czasie.
-\item Wspólna praca zespołu w jednym pokoju wpływa na większą świadomość jego członków w postępie prac. Przekłada się to na przykład na szybsze znajdowanie błędów, czy zbiorowe rozwiązywanie większych problemów.
-\item Linux jest o wiele lepszym systemem operacyjnym do programowania niż Windows. Linux góruje ilością programów operujących na plikach tekstowych i łatwością pisania skryptów. Programista pracujący na systemie Linux ma poczucie, że wiele procesów można zautomatyzować, w przeciwieństwie do pracy na systemie Windows.
-\item Nie jest dobrym pomysłem wybieranie rozwiązań, o których ma się szczątkowe pojęcie. Lepiej jest wybrać pewne rozwiązania, nawet jeżeli wydaje się, że wymagają więcej zaangażowania.
-\item Wybór pracy inżynierskiej pod nadzorem zespołu SDS był dobrym pomysłem. Wsparcie architekta oraz analityka było bardzo przydatne, a nawet niezbędne do ukończenia pracy w terminie.
+\item ...
 \end{itemize}
 \item Łukasz Wieczorek:
 \begin{itemize}
-\item Zmiany zatwierdza się (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą należało zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
-\item Warto przygotować wcześniej logikę, z której będą korzystać programiści interfejsu, by nie opóźniać ich pracy,
-\item W przypadku braku wiedzy odnośnie sposobu implementacji funkcjonalności najlepiej skonsultuj się z architektem -- zwykle dysponuje on większą wiedzą ogólną,
+\item Zatwierdzaj swoje zmiany (ang. \emph{commit}) dopiero, gdy funkcjonalność, którą miałeś zaimplementować, jest kompletna i przetestowana jednostkowo oraz akceptacyjnie,
+\item Przygotuj wcześniej logikę, z której będą korzystać programiści interfejsu, by nie opóźniać ich pracy,
+\item Jeśli nie wiesz, jak zaimplementować daną funkcjonalność zapytaj architekta -- zwykle dysponuje on większą wiedzą ogólną,
 \item Werbalizacja problemu bardzo często pomaga w jego rozwiązaniu,
 \item Wcześniejsza refaktoryzacja znacznie ułatwia dalszą pracę nad kodem,
 \item Wielokrotnie powtarzane fragmenty kodu należy jak najszybciej zrefaktoryzować, by uchronić się od poprawiania podobnych konstrukcji składniowych,
