--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -107,7 +107,8 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 
 \begin{itemize}
 \item Interfejs użytkownika
-\item Obsługa Bazy Danych
+\item Powiązanie interfejsu z logiką
+\item Utworzenie Bazy Danych
 \end{itemize}
 \noindent
 
@@ -116,7 +117,6 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 \begin{itemize}
 \item Interfejs użytkownika
 \item Powiązanie interfejsu z logiką
-\item Obsługa Bazy Danych
 \end{itemize}
 \noindent
 
