--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -17,142 +17,70 @@ note = {Materiały zamieszczone w ramach platformy Redmine w domenie \url{http:/
 year = {2012-2013}
 }
 
-%@mastersthesis{BIS:BIS10,
-%  author =      {{P. Skrzypek, D. Lubański, R. Miłecki, T. Paszek}},
-%  title = 		{{BIS-1: Pilotażowa wersja systemu informacji bibliometrycznych}},
-%  school =		{{Politechnika Poznańska, Wydział Informatyki i Zarządzania, Instytut Informatyki}},
-%  year = 		{{2010}},
-%}
+@misc{PP:CUiWD10,
+title = {{Centralne uwierzytelnianie i wymiana danych.}},
+note = {{Wersja 1.2 (2010.07.06)}},
+year = {{2010}}
+}
 
-%@article{Lindsey:LIN88,
-%  author =       {{D. Lindsey}},
-%  title =        {{Using citation counts as a measure of quality in science measuring what's measurable rather than what's valid}},
-%  journal =    {{Scientometrics}},
-%  year =         {{1988}},
-%  volume =         {{15}},
-%  number =         {{3-4}},
-%  pages =        {{189-203}},
-%}
+@Book{BD:WdCiH11,
+author = {Bartosz Danowski},
+title = {Wstęp do CSS3 i HTML5},
+publisher = {Helion},
+year = {2011},
+}
 
-%@article{Hirsch:HIR05,
-%  author =       {{J. E. Hirsch}},
-%  title =        {{An index to quantify an individual's scientific research output}},
-%  journal =    {{Proceedings of the National Academy of Sciences}},
-%  year =         {{2005}},
-%  volume =         {{102}},
-%  number =         {{46}},
-%  pages =        {{16569-16572}},
-%}
+@Book{EQMG:PiMKp07,
+author = {Ellie Quigley, Marko Gargenta},
+title = {PHP i MySQL - Księga przykładów},
+publisher = {Helion},
+year = {2007},
+}
 
-%@article{Jaro:JAR89,
-%  author =       {{M. A. Jaro}},
-%  title =        {{Advances in Record-Linkage Methodology as Applied to Matching the 1985 Census of Tampa, Florida}},
-%  journal =    {{Journal of the American Statistical Association}},
-%  year =         {{1989}},
-%  volume =         {{89}},
-%  pages =        {{414-420}},
-%}
+@Manual{Man:PHP,
+title = {PHP Manual},
+year = {2012-2013},
+howpublished = {[on-line] \url{http://php.net/docs.php}}
+}
 
-%@article{Blei:BLE03,
-% author = {{D. M. Blei, A. Y. Ng, M. I. Jordan}},
-% title = {{Latent dirichlet allocation}},
-% journal = {{Journal of Machine Learning Research}},
-% volume = {{3}},
-% year = {{2003}},
-% pages = {{993-1022}},
-%} 
+@Manual{Man:PHPUnit,
+title = {PHPUnit Manual},
+year = {2012-2013},
+howpublished = {[on-line] \url{http://www.phpunit.de/manual/current/en}}
+}
 
-%@article{Casella:CAS92,
-% author = {{G. Casella, E. I. George}},
-% title = {{Explaining the Gibbs sampler}},
-% journal = {{The American Statistician}},
-% volume = {{46}},
-% number = {{3}}
-% year = {{1992}},
-% pages = {{167–174}},
-%} 
+@Manual{Man:Moodle,
+title = {Moodle documnentation},
+year = {2012-2013},
+howpublished = {[on-line] \url{http://docs.moodle.org/24/en/Main_page}}
+}
 
-%@inproceedings{Chierichetti:CHI10,
-% author = {{F. Chierichetti, R. Kumar, S. Pandey, S. Vassilvitskii}},
-% title = {{Finding the Jaccard median}},
-% booktitle = {{Proceedings of the Twenty-First Annual ACM-SIAM Symposium on Discrete Algorithms}},
-% series = {{SODA '10}},
-% year = {{2010}},
-% location = {{Austin, Texas}},
-% pages = {{293-311}},
-%}
+@Manual{Man:Selenium,
+title = {Selenium Documentation},
+year = {2012-2013},
+howpublished = {[on-line] \url{http://seleniumhq.org/docs}}
+}
 
-%@techreport{Winkler:WIN06,
-%  author =       {{W. Winkler}},
-%  title =        {{Overview of record linkage and current research directions}},
-%  institution =  {{Statistical Research Division, U.S. Bureau of the Census, Washington, DC}},
-%  year = {{2006}},
-%}
+@misc{Man:Ubuntu,
+title =			{{Official Ubuntu Documentation}},
+year =			{{2012-2013}},
+howpublished = {{[online] \url{https://help.ubuntu.com}}
+}
 
-%@techreport{Levenshtein:LEN66,
-%    author = {{V. I. Levenshtein}},
-%    journal = {{Soviet Physics Doklady}},
-%    number = {{8}},
-%    pages = {{707-710}},
-%    title = {{Binary codes capable of correcting deletions, insertions, and reversals}},
-%    volume = {{10}},
-%    year = {{1966}},
-%}
+@misc{W3C:SOAP07,
+	author = {{World Wide Web Consortium (W3C)}},
+	title = {{SOAP Version 1.2 Part 1: Messaging Framework (Second Edition)}},
+	howpublished = {{[on-line] \url{http://www.w3.org/TR/soap12-part1/}}}
+}
 
-%@misc{LingPipe:LIN00,
-%    author = {{LingPipe API Documentation}},
-%    title = {{Class JaroWinklerDistance}},
-%	howpublished = "[on-line] \url{http://alias-%i.com/lingpipe/docs/api/com/aliasi/spell/JaroWinklerDistance.html}",
-%}
+@misc{IP:Awbi,
+author = {Iwona Pilchowska},
+title = {Ankieta w badaniach ilościowych},
+publisher = {PB Online Sp. z o.o.},
+howpublished = {[on-line] \url{http://www.badaniamarketingowe.org.pl/system/attachments/75/original/Zasady_tworzenia_ankiety_badania_ilosciowego.pdf?1288570397!}}
+}
 
-%@misc{LingPipe:LIN01,
-%    author = {{LingPipe API Documentation}},
-%    title = {{Class LatentDirichletAllocation}},
-%	howpublished = "[on-line] \url{http://alias-%i.com/lingpipe/docs/api/com/aliasi/cluster/LatentDirichletAllocation.html}",
-%}
-
-%@misc{LingPipe:LIN02,
-%    author = {{LingPipe Tutorials}},
-%    title = {{Clustering Tutorial}},
-%	howpublished = "[on-line] \url{http://alias-i.com/lingpipe/demos/tutorial/cluster/read-me.html}",
-%}
-
-%@misc{Porter:POR00,
-%    author = {{M. Porter}},
-%    title = {{The Porter Stemming Algorithm}},
-%	howpublished = "[on-line] \url{http://tartarus.org/~martin/PorterStemmer/}",
-%}
-
-%@misc{Phan:PHA00,
-%    author = {{Xuan-Hieu Phan, Cam-Tu Nguyen}},
-%    title = {{JGibbLDA, A Java Implementation of Latent Dirichlet Allocation (LDA) using Gibbs Sampling for Parameter Estimation and Inference}},
-%	howpublished = "[on-line] \url{http://jgibblda.sourceforge.net/}",
-%}
-
-%@misc{W3C:SOAP07,
-%	author = {{World Wide Web Consortium (W3C)}},
-%	title = {{SOAP Version 1.2 Part 1: Messaging Framework (Second Edition)}},
-%	howpublished = "[on-line] \url{http://www.w3.org/TR/soap12-part1/}",
-%}
-
-%@misc{Interface:PureMVC,
-%    author = {{Futurescale}},
-%    title = {{Dokumentacja PureMVC}},
-%	howpublished = "[on-line] \url{http://puremvc.org/content/view/98/189/}",
-%}
-
-%@misc{Interface:SWFAddress,
-%    author = {{Asual}},
-%    title = {{Dokumentacja SWFAddress}},
-%	howpublished = "[on-line] \url{http://www.asual.com/swfaddress/docs/}",
-%}
-
-%@misc{Jericho:JER,
-%title = {{Jericho HTML Parser API Documentation}},
-%howpublished = "[on-line] \url{http://jericho.htmlparser.net/docs/javadoc/index.html}"
-%}
-
-%@misc{QtSDK:QT,
-%title = {{Qt API Reference}},
-%howpublished = "[on-line] \url{http://developer.qt.nokia.com/doc/qt-4.8}"
-%}
+@misc{Wiki:BA,
+title = {Badania ankietowe},
+howpublished = {[on-line] \url{http://pl.wikipedia.org/wiki/Badania_ankietowe}}
+}
