--- a/thesis/06-2-Technologie-MT.tex
+++ b/thesis/06-2-Technologie-MT.tex
@@ -1,4 +1,4 @@
-\subsection{JavaScript}
+\subsection{\textit{JavaScript}}
 \label{Chapter63b}
 
-Formularze wymagające częstej interakcji z klientem, np. formularz umożliwiający tworzenie nowej ankiety, oraz funkcje związane z walidacją pól uzupełnianych przez klienta zostały napisane w \emph{JavaScript}. Obsługa strony po stronie użytkownika zapobiega frustracji, związanej z częstym przeładowywaniem całej strony, co ogranicza zarówno obciążenie łącza po stronie serwera, jak i po stronie klienta.
+Formularze wymagające częstej interakcji z klientem, np. formularz umożliwiający tworzenie nowej ankiety, oraz funkcje związane z walidacją pól uzupełnianych przez klienta zostały napisane w \textit{JavaScript}. Obsługa strony po stronie klienta jest dla użytkownika niego znacznie wygodniejsza, gdyż nie wymaga częstego przeładowywania całej strony. Dodatkowo, ogranicza to obciążenie łącza zarówno po jego stronie, jak i po stronie serwera, co jest korzystne dla obu stron.
