--- a/thesis/06-3-Interfejs-KU.tex
+++ b/thesis/06-3-Interfejs-KU.tex
@@ -7,12 +7,12 @@
 \section{Interfejs}
 \label{Chapter65}
 
-Jedną z części pracy było zaprojektowanie graficznego interfejsu użytkownika. Głównym problemem jaki się pojawił, był wybór odpowiedniego narzędzia. Celem jaki postawiono, była maksymalna zgodność projektowanych elementów z różnymi wersjami \emph{Moodle} -- zarówno wcześniejszymi, jak i późniejszymi. Zdecydowano, aby starać się korzystać z gotowych interfejsów programowania aplikacji \emph{(API)} dostarczonych przez \emph{Moodle}, tj. \emph{Page API}, \emph{Form API}, oraz \emph{Access API}. Wszystkie interfejsy są napisane przy użyciu języka PHP -- są wykonywane po stronie serwera. Konieczne okazało się też wykonanie niektórych skryptów po stronie klienta. Dlatego w projekcie wykorzystano również język skryptowy \emph{Java Script}.
+W trakcie projektowania graficznego interfejsu użytkownika, głównym problemem okazał się wybór odpowiedniego narzędzia. Celem jaki postawiono, była maksymalna zgodność tworzonych elementów z różnymi wersjami \textit{Moodle} -- zarówno wcześniejszymi, jak i późniejszymi. Zdecydowano, aby starać się korzystać z gotowych interfejsów programowania aplikacji \textit{(API)} dostarczonych przez \textit{Moodle}, tj. \textit{Page API}, \textit{Form API}, oraz \textit{Access API}. Wszystkie interfejsy zostały napisane przy użyciu języka \textit{PHP} -- są wykonywane po stronie serwera. Konieczne okazało się też wykonanie niektórych skryptów po stronie klienta. Dlatego w projekcie wykorzystano również język skryptowy \textit{Java Script}.
 
 \subsection{Bezpieczeństwo}
 
-Potencjalnie z systemu może korzystać wielu użytkowników, zarówno studentów jak i pracowników. Każda z tych osób może być uprawniona do wykonywania innych czynności w systemie. Wiąże się to z jednej strony z uwierzytelnianiem użytkowników, z drugiej, ich autoryzacją. Odbywało się to za pomocą wbudowanego w \emph{Moodle} mechanizmu ról.
+Potencjalnie, z systemu może korzystać wielu użytkowników, zarówno studentów jak i pracowników. Każda z tych osób może być uprawniona do wykonywania innych czynności w systemie, niezależnie od siebie. Wiąże się to z jednej strony z uwierzytelnianiem użytkowników, zaś z drugiej -- ich autoryzacją. Odbywa się to za pomocą wbudowanego w \textit{Moodle} mechanizmu ról. \\
 
-Zapewnienie bezpieczeństwa w systemie polega po pierwsze na tym, aby użytkownik przez pomyłkę nie wykonał czynności, do których nie został uprawniony. Sprowadzało się to do tego, aby ograniczyć użytkownikowi wyświetlane opcji tylko do tych, które może używać. Np. tylko tych odnośników, które prowadzą do dozwolonych dla użytkownika zasobów.
+Zapewnienie bezpieczeństwa w systemie wymagane jest, aby użytkownik przez pomyłkę nie wykonał czynności, do których nie został uprawniony. Sprowadza się to do ograniczenia mu dostępnych opcji do tych, które może używać. Dla przykładu, użytkownik może zobaczyć i użyć jedynie tych odnośników, które prowadzą do zasobów, do których posiada uprawnienia. \\
 
-Po drugie, zapewnienie bezpieczeństwa wiąże się z odmową dostępu do zabronionych zasobów użytkownikom, których intencją było dostanie się do nich. Dlatego sprawdzano dane, które przychodzą do serwera. Np. utworzeno zmienne wiązane w zapytaniu \emph{SQL} w celu obrony przed atakiem \emph{SQL injection}. Co więcej przed wyświetleniem treści użytkownikowi sprawdzano, czy użytkownik może je przeczytać. Dzięki temu niepowołany użytkownik nie przeczyta niedozwolonych treści wpisując bezpośrednio adres do żądanej podstrony w pasku adresu przeglądarki.
+Zabezpieczenie nie ogranicza się jednak jedynie do ograniczenia dostępności opcji. Należy bowiem założyć, że użytkownik może przypadkowo lub z intencją próbować pozyskać zasoby bez autoryzacji. Z tego względu zapewnienie bezpieczeństwa wiąże się także z odmową dostępu do zabronionych zasobów. W tym celu sprawdzano dane, które przychodzą do serwera, m.in. tworząc zmienne wiązane w zapytaniach \textit{SQL}, co pozwala na obronę przed atakami typu \textit{SQL-injection}. Ostatecznie, bezpośrednio przed wyświetleniem treści użytkownikowi, sprawdzane jest, czy jest on uprawniony do ich czytania. Dzięki temu, niepowołany użytkownik nie uzyska dostępu do niedozwolonych treści nawet przez wykorzystanie adresu prowadzącego bezpośrednio do żądanego zasobu.
