--- a/thesis/06Implementacja.tex
+++ b/thesis/06Implementacja.tex
@@ -47,17 +47,15 @@ Przyczyną takiego stanu był stały rozwój systemu. Realizowany bez zastosowan
 
 Problem ten występował jednak jedynie w trakcie pierwszego wydania projektu. Przy drugim wydaniu, działalność związaną z testami jednostkowymi w sporej mierze przejął programista logiki aplikacji, co znacząco zmniejszyło czasochłonność ich realizacji. \\
 
-Większy problem tyczył się testów akceptacyjnych. Już na początku realizacji projektu, wyszło na jaw, że eksport z Selenium IDE (standard HTML) do Eclipse IDE (standard Java) nie jest zadaniem prostym. Dla przykładu, część metod odwołania do poszczególnych obszarów na stronie nie może być przenoszony do Javy, ze względu na znane problemy. \\
+Większy problem tyczył się testów akceptacyjnych. Już na początku realizacji projektu, wyszło na jaw, że eksport z \textit{Selenium IDE} (standard \textit{HTML}) do \textit{Eclipse IDE} (standard \textit{Java}) nie jest zadaniem prostym. Dla przykładu, część metod odwołania do poszczególnych obszarów na stronie nie może być przenoszony do Javy, ze względu na znane problemy. \\
 
-Na podstawie powyższej analizy stwierdzono, że testy akceptacyjne mogą być wykonywane za pomocą rozszerzenia Selenium IDE for Firefox, szczególnie, że narzędzia w nim dostępne umożliwiają spory stopień automatyzacji.
+Na podstawie powyższej analizy stwierdzono, że testy akceptacyjne mogą być wykonywane za pomocą rozszerzenia \textit{Selenium IDE for Firefox}, szczególnie, że narzędzia w nim dostępne umożliwiają spory stopień automatyzacji.
 
 \subsection{Mapowanie obiektowo-relacyjne}
 \label{Chapter62c}
 %LW
 
-Mapowanie obiektowo-relacyjne pozwala uprościć operacje na danych przechowywanych w bazie danych poprzez udostępnienie ich programiście w postaci obiektowej. \\
-
-System \emph{iQuest} operuje na klasach takich jak: ankieta, badanie, grupa docelowa, członek grupy docelowej, uprawnienie dostępu, pytanie (i potomne), odpowiedź, zadanie, praca w tle, etc. Początkowo architekt stworzył diagram klas na którym każda klasa miała wyróżnione publiczne metody \emph{insert, update, delete}. Niestety takie rozwiązanie spowodowało powielenie dużej ilości kodu związanego z interakcją z bazą danych. W ramach refaktoryzacji podjęto zadania stworzenia klas, które wzorem nowoczesnych systemów \emph{ORM} uproszczą projektowanie nowych klas reprezentujących dane. Ze względu na silną integrację z mechanizmami \emph{Moodle} w grę nie wchodziły gotowe rozwiązania. Autorskie rozwiązanie korzysta z mechanizmów \emph{Moodle Data manipulation API} oraz mechanizmu refleksji języka PHP, by pozwolić programiście korzystającego z tego rozwiązania na proste pobieranie i manipulację obiektami przechowywanymi w bazie danych. Diagram UML przedstawia się następująco:
+Mapowanie obiektowo-relacyjne pozwala uprościć operacje na danych przechowywanych w bazie danych poprzez udostępnienie ich programiście w postaci obiektowej. System \textit{iQuest} operuje na klasach takich jak: ankieta, badanie, grupa docelowa, członek grupy docelowej, uprawnienie dostępu, pytanie (i potomne), odpowiedź, zadanie, praca w tle, etc. Początkowo architekt stworzył diagram klas na którym każda klasa miała wyróżnione publiczne metody \emph{insert, update, delete}. Niestety takie rozwiązanie spowodowało powielenie dużej ilości kodu związanego z interakcją z bazą danych. W ramach refaktoryzacji podjęto zadania stworzenia klas, które wzorem nowoczesnych systemów \emph{ORM} uproszczą projektowanie nowych klas reprezentujących dane. Ze względu na silną integrację z mechanizmami \emph{Moodle} w grę nie wchodziły gotowe rozwiązania. Autorskie rozwiązanie korzysta z mechanizmów \emph{Moodle Data manipulation API} oraz mechanizmu refleksji języka PHP, by pozwolić programiście korzystającego z tego rozwiązania na proste pobieranie i manipulację obiektami przechowywanymi w bazie danych. Diagram UML przedstawia się następująco:
 
 \newpage
 \begin{figure}[H]
